...
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:text="@{@string/reminder_description_location(viewModel.reminder.location)}"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_medium"
            app:drawableStartCompat="@drawable/ic_location"
            app:layout_constraintBottom_toTopOf="@id/delete_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="Location" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/delete_button"
...
